--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,15 +3,15 @@ name: Build and deploy .NET application to Container App silo
 on:
   push:
     branches:
-    - deploy
+    - main
 
 env:
   
   # alphanumeric string under 14 characters
-  RESOURCE_GROUP_NAME: bankingappaca
+  RESOURCE_GROUP_NAME: bankingstoreappaca
 
   # specify your preferred region
-  REGION: eastus
+  REGION: southcentralus
 
   FRONTEND_DOCKER: BankingApp/Banking.WebUI/Dockerfile
   FRONTEND_IMAGE: frontend
