--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,7 +8,7 @@ on:
 env:
   
   # alphanumeric string under 14 characters
-  RESOURCE_GROUP_NAME: bankingstoreappaca
+  RESOURCE_GROUP_NAME: bankingappaca
 
   # specify your preferred region
   REGION: southcentralus
